@@ -4,6 +4,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 
 Version 6.0.4 - not yet released
 * devices
+   - EWMicroRecorder: parse PGRMZ as altitude above 1013.25 hPa
    - FlymasterF1: convert pressure to altitude
    - FlymasterF1: don't override the baro altitude of the primary device
    - Zander: PZAN1 contains QNH altitude
